--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -31,3 +31,5 @@ flutter:
     - assets/classroom.png
     - assets/contact.png
     - assets/about.png
+    - assets/lecturer.png
+    - assets/student.png
