--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.12.1
+  firebase_database: ^11.3.4
 
 dev_dependencies:
   flutter_test:
