--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_database: ^11.3.4
   cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.1
 
 dev_dependencies:
   flutter_test:
