--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_database: ^11.3.4
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
