New Student's UI Improvements with News API.

--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   firebase_auth: ^5.5.1
   intl: ^0.18.1
   firebase_messaging: ^15.2.4
+  http: ^1.1.0
+  carousel_slider: ^4.0.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -44,3 +47,4 @@ flutter:
     - assets/appointment.png
     - assets/inbox.png
     - assets/Switch.png
+    - assets/campus_large.png
