--- a/finder/pubspec.yaml
+++ b/finder/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   http: ^1.1.0
   carousel_slider: ^4.0.0
   flutter_svg: ^2.0.7
+  google_maps_flutter: ^2.2.0
+  geolocator: ^10.0.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
